--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,7 +7,7 @@
 app-fqdn-rules.tf @swelshavxsec
 
 # In a true org structure, these files should have the Network Operators account as the owner:
-main.tf @swelshavxnet
+main.tf @swelshavx
 provider.tf @swelshavx
 variables.tf @swelshavx
 versions.tf @swelshavx
