--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,7 +4,7 @@
 # this repository, with the Development group able to author and push pull requests.
 
 # In a true org structure, this line would be something like: "app-fqdn-rules.tf @<secops>"
-app-fqdn-rules.tf @SecOpsMCSTech
+app-fqdn-rules.tf @MCSSecOps
 
 # In a true org structure, these files should have the Network Operators account as the owner:
 main.tf @ NetOPsMCSTech 
