--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,10 +4,10 @@
 # this repository, with the Development group able to author and push pull requests.
 
 # In a true org structure, this line would be something like: "app-fqdn-rules.tf @<secops>"
-app-fqdn-rules.tf chip-aviatrix-secops
+app-fqdn-rules.tf @chip-aviatrix-secops
 
 # In a true org structure, these files should have the Network Operators account as the owner:
-main.tf chip-aviatrix-netops
-provider.tf chip-aviatrix-netops
-variables.tf chip-aviatrix-netops
-versions.tf chip-aviatrix-netops
+main.tf @chip-aviatrix-netops
+provider.tf @chip-aviatrix-netops
+variables.tf @chip-aviatrix-netops
+versions.tf @chip-aviatrix-netops
