Update Done to Terraform Format
Needed to add following command:
"continue-on-error: true"

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check
+        continue-on-error: true
 
       # Initialize Terraform
       - name: Terraform Init
