--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,10 +4,10 @@
 # this repository, with the Development group able to author and push pull requests.
 
 # In a true org structure, this line would be something like: "app-fqdn-rules.tf @<secops>"
-app-fqdn-rules.tf sean.kim@bankwareglobal.com
+app-fqdn-rules.tf @ace-secops
 
 # In a true org structure, these files should have the Network Operators account as the owner:
-main.tf seokwoo@gmail.com
-provider.tf seokwoo@gmail.com
-variables.tf seokwoo@gmail.com
-versions.tf seokwoo@gmail.com
+main.tf @ace-netops
+provider.tf @ace-netops
+variables.tf @ace-netops
+versions.tf @ace-netops
